--- a/CSS/style.css
+++ b/CSS/style.css
@@ -141,7 +141,8 @@ html {
 
 .about .section-content {
     max-width: 1100px;
-    margin: auto;
+    margin: 1rem auto;
+
 }
 
 .about h2 {
@@ -237,25 +238,19 @@ html {
   }
 
 .section-title h2 {
-    font-size: 14px;
+    font-size: 48px;
+    font-family: 'Righteous', sans-serif;
+    text-align: center;
+    padding: 20px 0;
     font-weight: 500;
-    padding: 0;
     line-height: 1px;
     margin: 0 0 20px 0;
     letter-spacing: 2px;
     text-transform: uppercase;
-    color: #aaaaaa;
-    font-family: "Poppins", sans-serif;
+    color: #fff;
   }
   
-  .section-title h2::after {
-    content: "";
-    width: 120px;
-    height: 1px;
-    display: inline-block;
-    background: #4ceb95;
-    margin: 4px 10px;
-  }
+  
 
 .interests .icon-box {
     display: flex;
@@ -283,6 +278,141 @@ html {
   .interests .icon-box:hover {
     background: #94dbcd;
   }
+
+  /* Portfolio Section  */
+  .portfolio {
+    background-color: #1e2326;
+    color: #fff;
+    padding: 50px 20px;
+  }
+
+  .portfolio .container-section {
+    max-width: 1100px;
+    margin: auto;
+  }
+
+  .portfolio h2 {
+    font-size: 48px;
+    font-family: 'Righteous', sans-serif;
+    text-align: center;
+    padding: 20px 0;
+  }
+
+  .portfolio .galery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-bottom: 2rem;
+  }
+
+  .portfolio .galery .proyect {
+    position: relative;
+    max-width: 340px;
+    height: fit-content;
+    margin: 10px;
+    cursor: pointer;
+  }
+
+  .portfolio .galery .proyect img {
+    width: 100%;
+    display: block;
+  }
+
+  .portfolio .galery .proyect .overlay {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background: linear-gradient(rgba(28, 182, 152, .8), rgba(28, 182, 152, .8));
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: 1s;
+    font-style: 18px;
+    letter-spacing: 3px;
+    opacity: 0;
+  }
+
+  .portfolio .galery .proyect .overlay h3 {
+    margin-bottom: 20px;
+    transition: 1s;
+  }
+
+  .portfolio .galery .proyect .overlay:hover {
+    opacity: 1;
+  }
+
+  .portfolio .galery .proyect .overlay h3:hover {
+    margin-bottom: 0px;
+  }
+
+  /* Contact Section  */
+  
+  .contact {
+    background-color: #1e2326;
+  }
+
+  .contact h2 {
+    text-align: center;
+    font-size: 48px;
+    font-family: 'Righteous', sans-serif;
+    padding: 20px 0;
+  }
+
+  .contact p {
+    text-align: center;
+    font-family: 'Righteous', sans-serif;
+    color: red;
+    font-size: 1.2rem;
+  }
+
+  .contact  .row {
+    text-align: center;
+  }
+
+  form .btn {
+    width: 100%;
+  }
+
+
+
+  /* Responsive Section  */
+
+  @media screen and (max-width: 980px) {
+    nav {
+        display: none;
+    }
+
+    .nav-responsive {
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 15px;
+        background-color: #252A2E;
+        width: 50px;
+    }
+
+    nav.responsive ul {
+        display: block !important;
+    }
+    nav.responsive ul li {
+        border-bottom: 1px solid #fff;
+        padding: 10px 0;
+    }
+  }
+
+  @media screen and (max-width:700px){
+    .about-me .row {
+        display: block;
+    }
+    .about-me .row .col{
+        width: fit-content;
+    }
+
+
+
+
 
 
 
