--- a/CSS/style.css
+++ b/CSS/style.css
@@ -85,19 +85,23 @@ html {
 }
 
 .home .banner-content {
-    padding: 4.5rem;
-    background-color: #1e2326;
-    max-width: 350px;
     margin: 0 auto;
+    padding: 4rem;
     text-align: center;
-    border-radius: 40px;
+    border-radius: 50px; 
+    max-width: 350px;
+    height: 450px;
+    background-color: #1e2326;
+    opacity: 0.7;
+    z-index: 10;
+    top:70px;
 }
 
-.home .banner-content img{
+.home .banner-content img {
     border: 10px solid #1CB698;
     display: block;
     width: 80%;
-    margin: 40px auto;
+    margin: 30px auto;
     border-radius: 100%;
 }
 
@@ -122,7 +126,7 @@ html {
     width: 42px;
     height: 42px;
     line-height: 42px;
-    margin: 40px 5px;
+    margin: 20px 5px;
     font-size: 20px;
     transition: .3s;
 }
@@ -412,8 +416,7 @@ html {
     .about-me .row .col{
         width: fit-content;
     }
-
-
+  }
 
 
 
